--- a/index.html
+++ b/index.html
@@ -1,36 +1,51 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Weathertest yrs : YRS2014 weather System test" />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=640" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
 
-    <title>Weathertest yrs</title>
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>Weathertest yrs by GamingTurtle</title>
   </head>
 
   <body>
+    <a id="forkme_banner" href="https://github.com/GamingTurtle/WeatherTest_YRS">View on GitHub</a>
+    <div class="shell">
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/GamingTurtle/WeatherTest_YRS">View on GitHub</a>
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>Weathertest yrs</h1>
+            <h2>YRS2014 weather System test</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
 
-          <h1 id="project_title">Weathertest yrs</h1>
-          <h2 id="project_tagline">YRS2014 weather System test</h2>
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/GamingTurtle/WeatherTest_YRS/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/GamingTurtle/WeatherTest_YRS/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/GamingTurtle/WeatherTest_YRS/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/GamingTurtle/WeatherTest_YRS/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
         <p>How to install</p>
 
 <p>Requirments
@@ -42,20 +57,30 @@ $ sudo pip install flask
 
 <p>Installing</p>
 
-<pre><code>$ 
+<pre><code>cd ~
+$ sudo wget https://github.com/GamingTurtle/WeatherTest_YRS/tarball/master
+$ tar xzf  GamingTurtle-WeatherTest_YRS-433718b.tar.gz
+$ cd GamingTurtle-WeatherTest_YRS-433718b/
+$ sudo python StartServer.py
 </code></pre>
-      </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Weathertest yrs maintained by <a href="https://github.com/GamingTurtle">GamingTurtle</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+<p>Then in your browser navigate to localhost:5000</p>
+      </section>
+
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/GamingTurtle">GamingTurtle</a> can be found on <a href="https://github.com/GamingTurtle/WeatherTest_YRS">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
       </footer>
+
     </div>
 
     
-
   </body>
 </html>
