Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $ sudo pip install flask
 
 <p>Installing</p>
 
-<pre><code>cd ~
+<pre><code>$ cd ~
 $ sudo wget https://github.com/GamingTurtle/WeatherTest_YRS/tarball/master
 $ tar xzf  GamingTurtle-WeatherTest_YRS-433718b.tar.gz
 $ cd GamingTurtle-WeatherTest_YRS-433718b/
