Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Weathertest yrs by GamingTurtle</title>
+    <title>yrs2014 greenhouse control app by GamingTurtle</title>
   </head>
 
   <body>
@@ -27,8 +27,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Weathertest yrs</h1>
-            <h2>YRS2014 weather System test</h2>
+            <h1>yrs2014 greenhouse control app</h1>
+            <h2>yrs2014 greenhouse control app Using flask python RPI nany and arduino </h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -53,6 +53,12 @@ Flask</p>
 
 <pre><code>$ cd ~
 $ sudo pip install flask
+</code></pre>
+
+<p>nanpy</p>
+
+<pre><code>$ cd ~
+$ sudo pip install nanpy
 </code></pre>
 
 <p>Installing</p>
