Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
       <section id="main_content">
         <p>How to install</p>
 
-<p>Requirments
-Flask</p>
+<p>Requirments</p>
+
+<p>Flask</p>
 
 <pre><code>$ cd ~
 $ sudo pip install flask
