Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <section id="main_content">
         <p>How to install</p>
 
-<p>Requirments</p>
+<p>Requirments:</p>
 
 <p>Flask</p>
 
@@ -62,7 +62,7 @@ $ sudo pip install flask
 $ sudo pip install nanpy
 </code></pre>
 
-<p>Installing</p>
+<p>Installation:</p>
 
 <pre><code>$ cd ~
 $ sudo wget https://github.com/GamingTurtle/WeatherTest_YRS/tarball/master
