Changed download to fork as that is the correct github term

--- a/html weather/index.html
+++ b/html weather/index.html
@@ -37,7 +37,7 @@ The website is used to host info and documents/scripts and interactive features 
 			Thank you for visiting our project site at www.yrsweather.aberrobotics.club
 		</div><!-- ticker -->
 		<div id="headerimage">
-			<div id="download"><span id="download-text"><a href="https://github.com/GamingTurtle/YRSWeather" title="YRS Weather">Download our Documents on GitHub!</a></span></div><!-- download -->
+			<div id="download"><span id="download-text"><a href="https://github.com/GamingTurtle/YRSWeather" title="YRS Weather">Fork us on github!</a></span></div><!-- download -->
 			<div id="icons">
 				<a href="index.html" ><img src="images/icon_home.gif" alt="Home" width="13" height="13" id="home" /></a>
 				<a href="https://github.com/GamingTurtle/YRSWeather"><img src="images/icon_sitemap.gif" alt="GitHub Link" width="13" height="13" id="sitemap" /></a>
