--- a/html weather/index.html
+++ b/html weather/index.html
@@ -68,7 +68,7 @@ The website is used to host info and documents/scripts and interactive features 
 			<div id="cB1">
 				<h3>ABOUT OUR PROJECT</h3>
 				<div class="news">
-					<p>BLAH BLAHBLAH...........................................................................................................................................<BR />..................................................................... </p>
+					<p>When you download the code to open/close window manualy use cd ArduinoCode/Open then type sudo ino upload and the same with close<BR />..................................................................... </p>
 				</div>
 				<div class="news">
 					<p>.............................................................................................................................................................</p>
